# gameoflife

./: Cargo.toml  LICENSE  README.md  index.html
src/: lib.rs  main.rs  node.rs  universe.rs
